force-app/main/default/objects/Address/fields/Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Accuracy__c</fullName>
    <description>CGIS response</description>
    <label>Accuracy</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>