force-app/main/default/objects/Address/fields/CGIS_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>CGIS_Post_Code__c</fullName>
    <description>CGIS Post Code returned by CGIS</description>
    <label>CGIS Post Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>