force-app/main/default/objects/Address/fields/CGIS_Verfified__c.field-meta.xml
<CustomField>
    <fullName>CGIS_Verfified__c</fullName>
    <label>CGIS Verified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>