force-app/main/default/objects/Address/fields/Geocodeable__c.field-meta.xml
<CustomField>
    <fullName>Geocodeable__c</fullName>
    <label>Geocodeable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>