force-app/main/default/objects/Address/fields/Manual_CGIS_override__c.field-meta.xml
<CustomField>
    <fullName>Manual_CGIS_override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual CGIS override</label>
    <type>Checkbox</type>
</CustomField>