force-app/main/default/objects/Address/fields/Migration_Address_Details__c.field-meta.xml
<CustomField>
    <fullName>Migration_Address_Details__c</fullName>
    <label>Migration Address Details</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>