force-app/main/default/objects/Address/fields/Oracle_Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Address_ID__c</fullName>
    <label>Oracle Address ID</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>