force-app/main/default/objects/Address/fields/Physical_and_Postal_Address_are_the_same__c.field-meta.xml
<CustomField>
    <fullName>Physical_and_Postal_Address_are_the_same__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Physical and Postal Address are the same</label>
    <type>Checkbox</type>
</CustomField>