force-app/main/default/objects/Address/fields/Post_Office_Box__c.field-meta.xml
<CustomField>
    <fullName>Post_Office_Box__c</fullName>
    <label>Post Office Box</label>
    <length>20</length>
    <type>Text</type>
</CustomField>