force-app/main/default/objects/Address/fields/State_or_Territory__c.field-meta.xml
<CustomField>
    <fullName>State_or_Territory__c</fullName>
    <description>State or Territory</description>
    <label>State or Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>QLD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>