force-app/main/default/objects/Address/fields/Street_Name__c.field-meta.xml
<CustomField>
    <fullName>Street_Name__c</fullName>
    <description>Street Name</description>
    <label>Street Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>