force-app/main/default/objects/Address/fields/Street_Number_1__c.field-meta.xml
<CustomField>
    <fullName>Street_Number_1__c</fullName>
    <description>Street Number</description>
    <label>Street Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>